# chimera-pq

./: .gitignore  Cargo.toml  README.md  deny.toml  justfile
configs/: adaptive_domains.txt  auto_failover_seeds.txt  chimera-app-routes.conf  chimera-app-routes.example.conf  client.example.conf  gateway.example.conf  manual_gateway_domains.txt  mesh_launch_preflight.laptop.env  mesh_launch_preflight.vps.env  mesh_launch_preflight.vps.env.example  mesh_nodes.example.conf  policy.runtime.conf  probe_targets.example.txt  runtime_real_world_probe.env  upstream_pool.list  upstream_proxy.env.example
crates/chimera-capture/: Cargo.toml
crates/chimera-capture/src/: lib.rs  redirect.rs
crates/chimera-cli/: Cargo.toml
crates/chimera-cli/src/: main.rs
crates/chimera-cli/src/mesh_cli/: connect_probe_cmd.rs  connect_probe_flow.rs  contracts_cmd.rs  launch_preflight_cmd.rs  launch_preflight_verify_cmd.rs  mod.rs  nodes_cmd.rs  nodes_inventory.rs  nodes_render.rs  nodes_selection.rs  options.rs  route_explain_contract.rs  route_explain_envelope.rs  route_explain_error.rs  route_explain_error_consts.rs  route_explain_fields.rs  route_explain_health.rs  route_explain_integrity.rs  route_explain_json.rs  route_explain_json_insert.rs  route_explain_meta.rs  route_explain_output.rs  route_explain_pressure.rs  route_explain_recovery.rs  route_explain_recovery_projection.rs  route_explain_types.rs  tests_connect_probe_flow.rs  tests_connect_probe_json.rs  tests_consistency_sources.rs  tests_contract_constants.rs  tests_json_contract.rs  tests_json_error_contract.rs  tests_json_error_options_parse.rs  tests_json_error_options_parse_duplicates.rs  tests_json_error_options_parse_flag_shape.rs  tests_json_error_snapshot.rs  tests_json_error_utils.rs  tests_json_operator_cross_contract.rs  tests_json_operator_cross_contract_matrix.rs  tests_json_runner_utils.rs  (+23 more)
crates/chimera-cli/src/mesh_cli/tests_connect_launch_error_parity/: mod.rs  policy_and_path_matrix.rs  single_cases.rs  stage_and_peer_matrix.rs
crates/chimera-cli/src/mesh_cli/tests_connect_launch_error_parity_options/: duplicate_singletons.rs  invalid_numeric_singletons.rs  matrix_core.rs  missing_value_singletons.rs  mod.rs  position_and_alias_matrix.rs
crates/chimera-cli/src/mesh_cli/tests_connect_launch_error_parity_options_required/: identity_matrix.rs  mod.rs  required_matrix.rs  singleton_cases.rs
crates/chimera-client/: Cargo.toml
crates/chimera-client/src/: lib.rs
crates/chimera-crypto/: Cargo.toml
crates/chimera-crypto/src/: lib.rs
crates/chimera-gateway/: Cargo.toml
crates/chimera-gateway/src/: lib.rs  main.rs
crates/chimera-lab/: Cargo.toml
crates/chimera-lab/src/: artifact_checks.rs  cef_phase1_mesh.rs  main.rs  mvp_reports.rs  release_reports.rs
crates/chimera-lab/tests/: fake_client_gateway.rs
docs/: AEAD_PERFORMANCE_AND_PQ_CRYPTO_2026-05-27.md  ARCHITECTURE.md  ARTIFACT_AUDIT.json  AUTOMATION_DEBT_REGISTER.md  BENCHMARK_REGRESSION_GATE.json  CEF_GAP_MAP_2026-05-18.md  CEF_PHASE1_GATES.md  CEF_PHASE1_SMOKE.json  CEF_TRACK_REPORT.json  CEF_TRACK_REPORT.md  CHIMERA_AUTONOMOUS_NAT_GUARD.json  CHIMERA_BIDIRECTIONAL_E2E_REPORT_2026-05-22_15-48-38.md  CHIMERA_BIDIRECTIONAL_E2E_SMOKE_2026-05-22_16-09-31.md  CHIMERA_BIDIRECTIONAL_E2E_SMOKE_2026-05-22_16-10-58.md  CHIMERA_BIDIRECTIONAL_E2E_SMOKE_2026-05-22_16-12-24.md  CHIMERA_BROWSER_PARALLEL_SOAK_5M.json  CHIMERA_BROWSER_PARALLEL_SOAK_5M_STABILIZED2.json  CHIMERA_COMMISSION_REPORT.json  CHIMERA_COMMISSION_REPORT_REAL.json  CHIMERA_FRESH_GATE_REPORT.md  CHIMERA_LOAD_GATE_LAPTOP.md  CHIMERA_MESH_LOAD_REPORT_2026-05-22.md  CHIMERA_MESH_UNDER_LOAD_5M.json  CHIMERA_PARALLEL_SOAK_5M.json  CHIMERA_PARALLEL_SOAK_5M_STABILIZED.json  CHIMERA_PATH_PROOF_PROD.json  CHIMERA_PATH_PROOF_PROD_AFTER_FIX.json  CHIMERA_PATH_PROOF_WITH_AISTUDIO_RUN.json  CHIMERA_REMOTE_CYCLE_SMOKE_REPORT_2026-05-22_15-41-21.md  EXECUTION_MODE_NO_TIMELINES.md  FINAL_M5_M6_REPORT.md  GO_NO_GO.md  LAPTOP_FRESH_GATE_SUMMARY_2026-05-22.md  M5_ARTIFACTS_REPORT.md  M6_ARTIFACTS_REPORT.md  MESH_AUTO_ADAPTIVE_TRACE.json  MESH_DECISION_LOG.md  MESH_FIRST_LAUNCH_EXECUTION_GATE.md  MESH_LAUNCH_PREFLIGHT_LAPTOP.json  MESH_LAUNCH_PREFLIGHT_VERIFY.json  (+95 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_parser.rs  frame_decoder.rs  handshake_decoder.rs
scripts/: absolute_completion_lock_guard.sh  anti_monolith_guard.sh  automation_debt_guard.sh  baseline_freeze.sh  benchmark_regression_check.sh  build_release.sh  cargo_deny_guard.sh  cef_consistency_guard.sh  cef_gap_map_guard.sh  cef_track_guard.sh  cef_track_report.sh  cef_track_sync_guard.sh  chimera-autofix.sh  chimera-control-desktop-entry.sh  chimera-control-launcher.sh  chimera-control-open-terminal.sh  chimera-control-tray.sh  chimera-control.sh  chimera-path-proof.sh  chimera-runner.sh  chimera-sh  chimera-socks-watchdog.sh  chimera.sh  chimera_autonomous_nat_guard.sh  chimera_bidirectional_e2e_smoke.sh  chimera_channel_audit.sh  chimera_desktop_hygiene_guard.sh  chimera_e2e_channel_gate.sh  chimera_e2e_channel_gate_guard.sh  chimera_fresh_gate_report.sh  chimera_installer_gate.sh  chimera_laptop_fresh_gate_sync.sh  chimera_load_5m_laptop.sh  chimera_load_gate_laptop.sh  chimera_remote_cycle_smoke.sh  chimera_runtime_bootstrap.sh  chimera_runtime_verification.sh  chimera_upstream_autobootstrap.sh  cleanroom_handoff_check.sh  (+45 more)
(+273 files in other folders)
