[package]
name = "chimera-capture"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chimera-core = { path = "../chimera-core" }
nix = { version = "0.31.3", features = ["socket", "net"] }
ctrlc = "3"
socket2 = "0.6"
