[package]
name = "chimera-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chimera-core = { path = "../chimera-core" }
chimera-crypto = { path = "../chimera-crypto" }
chimera-session = { path = "../chimera-session" }
