[package]
name = "chimera-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
chimera-core = { path = "../chimera-core" }
hkdf = "0.12"
ml-kem = { version = "0.3.2", features = ["getrandom", "zeroize"] }
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "zeroize"] }
